--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "flat-color-icons": "^1.1.0",
     "next": "12.1.6",
     "particles.js": "^2.0.0",
     "react": "18.2.0",
